test/error/gsub.luau
string.gsub("test", "test2", buffer.create(5))